--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -18,6 +18,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2018-08-20" version="3.8.4"/>
     <release date="2018-08-19" version="3.8.3"/>
     <release date="2018-08-19" version="3.8.2"/>
     <release date="2018-08-17" version="3.8.1"/>
