--- a/backend/lib/openssl/CMakeLists.txt
+++ b/backend/lib/openssl/CMakeLists.txt
@@ -27,6 +27,14 @@
 project( openssl )
 cmake_minimum_required( VERSION 2.8.3 )
 
+set( VERSION_MAJOR 1  )
+set( VERSION_MINOR 0  )
+set( VERSION_PATCH 2p )
+
+set( VERSION_STRING ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH} )
+set( LIB_VERSION ${VERSION_MAJOR}.${VERSION_MINOR} )
+set( LIB_SOVERSION ${VERSION_MAJOR}.${VERSION_MINOR} )
+
 include_directories ( BEFORE SYSTEM
     ${CMAKE_CURRENT_BINARY_DIR}/crypto
     ${CMAKE_CURRENT_BINARY_DIR}/ssl
@@ -70,9 +78,9 @@ install( DIRECTORY doc DESTINATION share )
 # Generate the package target
 set( CPACK_GENERATOR ZIP TGZ )
 set( CPACK_PACKAGE_NAME "openssl-cmake" )
-set( CPACK_PACKAGE_VERSION_MAJOR 1  )
-set( CPACK_PACKAGE_VERSION_MINOR 0  )
-set( CPACK_PACKAGE_VERSION_PATCH 2p )
+set( CPACK_PACKAGE_VERSION_MAJOR ${VERSION_MAJOR} )
+set( CPACK_PACKAGE_VERSION_MINOR ${VERSION_MINOR} )
+set( CPACK_PACKAGE_VERSION_PATCH ${VERSION_PATCH} )
 
 include( CPack )
 
