--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -18,6 +18,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2018-10-13" version="3.9.1"/>
     <release date="2018-09-15" version="3.8.7"/>
     <release date="2018-08-26" version="3.8.6"/>
     <release date="2018-08-25" version="3.8.5"/>
