--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -9,7 +9,7 @@
   <metadata_license>CC0-1.0</metadata_license>
   <url type="homepage">http://janbar.github.io/noson-app/</url>
   <description>
-    <p>The fast and smart controller for your SONOS devices. You can browse your music library and play track or radio on any zones. 
+    <p>The fast and smart controller for your SONOS devices. You can browse your music library and play track or radio on any zones.
     You can manage grouping zones, queue, and playlists, and fully control the playback.</p>
   </description>
   <screenshots>
@@ -18,6 +18,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2018-11-29" version="3.9.2"/>
     <release date="2018-10-13" version="3.9.1"/>
     <release date="2018-09-15" version="3.8.7"/>
     <release date="2018-08-26" version="3.8.6"/>
