--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -18,6 +18,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2018-12-01" version="3.9.4"/>
     <release date="2018-12-01" version="3.9.3"/>
     <release date="2018-11-29" version="3.9.2"/>
     <release date="2018-10-13" version="3.9.1"/>
