--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -18,6 +18,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2019-01-16" version="3.9.7"/>
     <release date="2019-01-10" version="3.9.6"/>
     <release date="2019-01-08" version="3.9.5"/>
     <release date="2018-12-01" version="3.9.4"/>
