--- a/backend/lib/noson/noson/src/local_config.h.in
+++ b/backend/lib/noson/noson/src/local_config.h.in
@@ -38,4 +38,13 @@
 #undef LIBVERSION_PATCH
 #define LIBVERSION_PATCH @noson_VERSION_PATCH@
 
+#undef HAVE_PULSEAUDIO
+#cmakedefine HAVE_PULSEAUDIO @HAVE_PULSEAUDIO@
+
+#undef HAVE_FLAC
+#cmakedefine HAVE_FLAC @HAVE_FLAC@
+
+#undef HAVE_MP3LAME
+#cmakedefine HAVE_MP3LAME @HAVE_MP3LAME@
+
 #endif	/* LOCAL_CONFIG_H */
