--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,9 @@ Build-Depends: cmake,
                libqt5svg5-dev,
                zlib1g-dev,
                libssl-dev,
+               libpulse-dev,
+               libflac-dev,
+               libflac++-dev,
                qml-module-qt-labs-settings,
                qml-module-qtgraphicaleffects,
                qml-module-qtqml-models2,
@@ -41,6 +44,9 @@ Depends: qml-module-qt-labs-settings,
          libqt5svg5,
          zlib1g,
          openssl,
+         libpulse0,
+         libflac++6v5,
+         libflac8,
          ${shlibs:Depends}, ${misc:Depends}
 Description: SONOS controller for Linux
  Touch enabled SONOS controller for Linux
