--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.1.0)
 
+set(CMAKE_CXX_STANDARD 11)
+
 if(NOT BUILD_DEPENDENCIES)
     find_package(noson QUIET)
 endif()
